--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,9 @@ jobs:
       run: |
         make lint     
     - name: test
+      run: |
         make test
     - name: format
+      run: |
         make format    
 
